--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js"
   },
   "include": ["apps/**/*", "packages/**/*"],
   "exclude": ["node_modules"]
