feat: design system tokens and theme toggles
- implement decision record for theme tokens
- add theme.css to mosquito-design-system with tailwind v4 vars
- add ThemeToggle component and fouc.js snippet
- refactor dev-blog app.tsx to use Router to support routes
- test theme on dev-blog /design-system
- apply fouc.js directly to entry-server.tsx for all apps

--- a/packages/mosquito-design-system/package.json
+++ b/packages/mosquito-design-system/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "exports": {
-    "./theme.css": "./theme.css"
+    "./theme.css": "./theme.css",
+    "./fouc.js": "./fouc.js",
+    "./ThemeToggle": "./ThemeToggle.tsx"
+  },
+  "peerDependencies": {
+    "solid-js": "^1.9.5"
   }
 }
